# auto-trestle

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
fixtures/: README.md
hack/: bootstrap-fixtures-oscal.sh  bootstrap-trestle.sh
