[tool.poetry]
name = "auto-trestle"
version = "0.1.0"
description = "CICD tooling for compliance-trestle"
authors = ["Tyler Pate <tpate@redhat.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "auto_trestle"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
